--- a/mvchomework/Views/Shared/_Layout.cshtml
+++ b/mvchomework/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <li>@Html.ActionLink("關於", "About", "Home")</li>
                     <li>@Html.ActionLink("連絡人", "Contact", "Home")</li>
                     <li>@Html.ActionLink("客戶聯絡人", "Index", "Customer")</li>
-                    <li>@Html.ActionLink("客戶資料", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("客戶資料", "Index", "CustData")</li>
                     <li>@Html.ActionLink("客戶銀行資訊", "Contact", "Home")</li>
                 </ul>
             </div>
